Update padding to compensate for margin-collapse-bugfix

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -419,7 +419,7 @@ dialog:not([open])
 button, [type=button], [type=submit], [type=reset], [role=button] {
   /* ARIA - https://www.w3.org/TR/wai-aria-1.1/#button */
   width: max-content;
-  padding: 0 1.618em;
+  padding: var(--margin-collapse-bugfix) var(--line-height);
   background: buttonFace;
   margin: var(--p-margin);
   border-radius: 0.1618em;
